--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,16 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-reqwest = "0.11"
 serde = { version = "1", features = ["derive"]}
 config = "0.13"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+tracing-actix-web = "0.7"
+secrecy = { version = "0.8", features = ["serde"] }
 
 [dependencies.sqlx] 
 version = "0.6" 
@@ -31,6 +36,10 @@ features = [
 "chrono",
 "migrate"
 ]
+
+[dev-dependencies]
+once_cell = "1"
+reqwest = { version = "0.11", features = ["json"] }
 
 [target.x86_64-apple-darwin]
 rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
